2022-11-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Use the https_proxy and http_proxy
	environment variables if no proxying is specified. Also support
	those keys as properties in the request (overriding the environment
	variables) and support the URL protection spece if set.

2022-11-26 Fred Kiefer <fredkiefer@gmx.de>

	* Source/Additions/GSXML.m: Remove usage of deprecated function
	when a newer version of libxml is used.

2022-11-25  Florian Weimer

	* config/config.poll-dev.c:
	* config/config.proccmd.c:
	* config/config.reuseaddr.c:
	* config/config.vasprintf.c:
	* config/config.vsprintf.c:
	Make config tests work with C99 compiler

2022-11-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSFileManager.m:
	Call NSDirectoryEnumerator's constructor with either YES or NO for
	the BOOL arguments.
	Really skip hidden files in enumerations if requested by the
	options.

2022-11-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSFileHandle.h:
	* Headers/GNUstepBase/GSTLS.h:
	* Source/GSHTTPURLHandle.m:
	* Source/GSSocketStream.m:
	* Source/GSTLS.m:
	* Source/NSURLProtocol.m:
	* Source/externs.m:
	Fixup to use strict rfc4514 for distinguished names of issuer and
	owner of certificates.  Add GSTLSIssuers and GSTLSOwners properties
	to reject remote certificates which do not match distinguishd names
	accepted.  This allows encrypted DO to be configured to automatically
	reject connection attempts which do not have trusted certificates.

2022-11-15 Richard Frith-Macdonald <rfm@gnu.org>

	* GSSocketStream.m:
	* NSFileHandle.m:
	Use new -[GSTLS pending] method to trigger event handling immediately
	rather than waiting for more data from the network layer.

2022-11-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSTLS.h:
	* Source/GSTLS.m:
	Add -pending method to return the number of bytes in the read bufffer.
	* Source/NSSocketPort.m:
	Use the new method to avoid a potential hang on an encrypted DO